[gd_scene load_steps=4 format=3 uid="uid://cwme2scx3x4tx"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ruuug"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sstay"]

[sub_resource type="Theme" id="Theme_y8kft"]

[node name="main_menu" type="Control"]
z_as_relative = false
material = SubResource("ShaderMaterial_sstay")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Menu principal"
mouse_default_cursor_shape = 2
theme = SubResource("Theme_y8kft")
script = ExtResource("1_ruuug")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -68.0
offset_right = 43.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="titulo_menu" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Menu Principal"
horizontal_alignment = 1

[node name="start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
text = "Comenzar"
icon_alignment = 1
language = "es_AR"

[node name="tutorial_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_button")
text = "Salir"
